--- a/composer.json
+++ b/composer.json
@@ -5,6 +5,7 @@
   "require": {
     "erusev/parsedown": "^1.8",
     "erusev/parsedown-extra": "^0.8",
+    "caseyamcl/toc": "~1.0",
     "guzzlehttp/guzzle": "^6.3"
   },
   "minimum-stability": "beta",
